[workspace.package]
version = "0.0.9"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = [
    "icelake",
    "rest_api"
]


[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
apache-avro = { version = "0.15", features = ["derive"] }
arrow = { version = "46" }
bytes = "1"
opendal = ">=0.37, <0.40"
uuid = { version = "1", features = ["v4"] }
serde = "1"
serde_json = "1"
serde_with = "3"
tokio = { version = "1.28", features = ["full"] }
parquet = { version = "46", features = ["async"] }
rust_decimal = "1.30"
chrono = "0.4"
faster-hex = "0.8.0"
once_cell = "1"
tempfile = "3"
log = "0.4.0"
env_logger = "0.10.0"
csv = "1"
url = "2"
regex = "1"
clap = { version = "4", features = ["derive"] }
ordered-float = "3.7.0"
confique = "0.2"
libtest-mimic = "0.6"
futures = { version = "0.3", features = ["executor"] }
testcontainers = {git = "https://github.com/liurenjie1024/testcontainers-rs.git", rev = "24fd08c05aa72ca7542198056c8c592a1899fd39"}
