[workspace.package]
version = "0.0.10"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["icelake"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
apache-avro = { version = "0.15", features = ["derive"] }
arrow-array = { version = ">=46" }
arrow-schema = { version = ">=46" }
arrow-select = { version = ">=46" }
arrow-row = { version = ">=46" }
arrow-buffer = { version = ">=46" }
arrow-arith = { version = ">=46" }
arrow-csv = { version = ">=46" }
arrow-cast = { version = ">=46" }
arrow-ord = { version = ">=46" }
bytes = "1"
opendal = { version = ">=0.40", features = ["layers-prometheus"] }
uuid = { version = "1", features = ["v4"] }
serde = "1"
serde_json = "1"
serde_with = "3"
tokio = { version = "1.28", features = ["full"] }
parquet = { version = ">=46", features = ["async"] }
rust_decimal = "1.30"
chrono = "0.4"
faster-hex = "0.8.0"
once_cell = "1"
tempfile = "3"
log = "0.4.0"
env_logger = "0.10.0"
csv = "1"
url = "2"
regex = "1.9"
clap = { version = "4", features = ["derive"] }
ordered-float = "3.7.0"
confique = "0.2"
libtest-mimic = "0.6"
futures = { version = "0.3", features = ["executor"] }
murmur3 = "0.5.2"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
urlencoding = "2"
enum-display = "0.1"
itertools = "0.11"
prometheus = { version = "0.13" }
derive_builder = "0.12"
