[package]
name = "icelake"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Pure Rust Iceberg Implementation"

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
arrow-row = { workspace = true }
arrow-arith = { workspace = true }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true }
arrow-ord = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
opendal = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
parquet = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
faster-hex = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
ordered-float = { workspace = true }
apache-avro = { workspace = true }
bitvec = "1.0.1"
serde_bytes = "0.11.12"
toml = "0.7.6"
csv = "1.2.2"
murmur3 = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
enum-display = { workspace = true }
itertools = { workspace = true }
prometheus = { workspace = true, optional = true }
derive_builder = { workspace = true }
lazy_static = {workspace = true}

[dev-dependencies]
tempfile = { workspace = true }
confique = { workspace = true }
csv = { workspace = true }
env_logger = { workspace = true }
arrow-csv = { workspace = true }
libtest-mimic = { workspace = true }
opendal = { workspace = true, features = ["layers-prometheus", "services-fs"] }

[features]
prometheus = ["dep:prometheus"]

[[example]]
name = "read_iceberg_table"
harness = false

[[test]]
name = "insertion_test"
path = "tests/insert_tests.rs"
harness = false

[[test]]
name = "insert_compact_test"
path = "tests/insert_compact_test.rs"
harness = false


[[test]]
name = "delta_test"
path = "tests/delta_test.rs"
harness = false

[[test]]
name = "insertion_test_v2"
path = "tests/insert_tests_v2.rs"
harness = false

[[test]]
name = "delta_test_v2"
path = "tests/delta_test_v2.rs"
harness = false

[[test]]
name = "precompute_partition_test"
path = "tests/precompute_partition_test.rs"
harness = false
