[package]
name = "icelake-integration-tests"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Pure Rust Iceberg Implementation"

[dependencies]
icelake = { path = "../../../icelake" }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
opendal = { workspace = true }
serde = { workspace = true }
csv = { workspace = true }
arrow = { workspace = true }
confique = { workspace = true }
libtest-mimic = { workspace = true }
futures = { workspace = true }

[[test]]
name = "integration-test"
path = "src/tests.rs"
harness = false